packages/kit/test/apps/basics/src/routes/load/invalidation/url/+page.server.js
/** @type {import('./$types').PageLoad} */
export function load({ url }) {
	return {
		a: url.searchParams.get('a')
	};
}
